# Smart_Compiler

./: .~lock.github.pub#  README.md  architecture.plantuml  ollama-smart-compiler-Modelfile  pyproject.toml  smart-compiler.yml
Preparation/: preparation.py
examples/jacobi-2d/: c_analysis.txt  cetus_analysis.txt  gmon.out  main-profile  main.c
examples/matrix-multiplication/: main.py  main.py_profiling_info.txt  vector.py  vector.py_profiling_info.txt
src/: main.py  server_main.py
src/Preparation/: preparation.py
src/client/: main.py
src/client/abstract/: base_client.py
src/client/factory/: base_factory.py
src/client/ollama/: client.py
src/logging_utils/: base_logger.py
src/tools/profiler/: base_profiler.py  factory.py  mcp_tools.py
src/tools/profiler/cetus/: cetus_profiler.py  client.py
src/tools/profiler/mock/: analytic_profiler.py
src/tools/profiler/ollama/: ollama_profiler.py
